src/objects/Data_Change__c.object
<CustomObject>
    <description>A data change details an update to production data</description>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Reference</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Data Changes</relationshipLabel>
        <relationshipName>Data_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin User Setup</fullName>
                </value>
                <value>
                    <fullName>Cancelled Declined Loan</fullName>
                </value>
                <value>
                    <fullName>Code Development</fullName>
                </value>
                <value>
                    <fullName>Comments</fullName>
                </value>
                <value>
                    <fullName>DB Schema or Code Changes</fullName>
                </value>
                <value>
                    <fullName>Loan Transfer</fullName>
                </value>
                <value>
                    <fullName>Member Details</fullName>
                </value>
                <value>
                    <fullName>Money transfers</fullName>
                </value>
                <value>
                    <fullName>Process Failures</fullName>
                </value>
                <value>
                    <fullName>Rapid Returns</fullName>
                </value>
                <value>
                    <fullName>Remove Repayments</fullName>
                </value>
                <value>
                    <fullName>Salary Finance</fullName>
                </value>
                <value>
                    <fullName>Staff Bonus</fullName>
                </value>
                <value>
                    <fullName>Bad Debt Estimate Table Updates</fullName>
                </value>
                <value>
                    <fullName>Insert Fraud Record</fullName>
                </value>
                <value>
                    <fullName>Change Admin Role for User</fullName>
                </value>
                <value>
                    <fullName>Prevent DD for Sortcode</fullName>
                </value>
                <value>
                    <fullName>MGM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Routine Changes (e.g. MGM, Staff bonus, Fraud table)</fullName>
                    <isActive>false</isActive>
                    <label>Routine Changes (e.g. MGM, Staff bonus, Fraud table)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Summary__c</fullName>
        <label>Change Summary</label>
        <length>254</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Implemented__c</fullName>
        <label>Date Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Reference</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Data Changes</relationshipLabel>
        <relationshipName>Data_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Year_Month__c</fullName>
        <formula>TEXT(year(datevalue(CreatedDate))) &amp; &quot;-&quot; &amp; if(MONTH(datevalue(CreatedDate))&gt;9,TEXT(MONTH(datevalue(CreatedDate))),&quot;0&quot; &amp; TEXT(MONTH(datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rows_Affected__c</fullName>
        <label>Rows Affected</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQL_Transaction__c</fullName>
        <label>SQL Transaction</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Data Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Summary__c</columns>
        <columns>Date_Implemented__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Implemented__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Data Changes Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Data_changes_All</fullName>
        <columns>NAME</columns>
        <columns>Change_Summary__c</columns>
        <columns>Date_Implemented__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Data Changes ALL</label>
    </listViews>
    <listViews>
        <fullName>NEW_Data_Changes</fullName>
        <columns>NAME</columns>
        <columns>Change_Summary__c</columns>
        <columns>Category__c</columns>
        <columns>Date_Implemented__c</columns>
        <columns>Approved__c</columns>
        <columns>Denied__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>NEW Data Changes</label>
    </listViews>
    <listViews>
        <fullName>NEW_Data_Changes_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>Change_Summary__c</columns>
        <columns>Category__c</columns>
        <columns>Date_Implemented__c</columns>
        <columns>Approved__c</columns>
        <columns>Denied__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>NEW Data Changes Last 7 Days</label>
    </listViews>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Data Change</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approval_by_Different_Person</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Approved__c ), CreatedById =   $User.Id )</errorConditionFormula>
        <errorMessage>You cannot approve your own change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Missing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Case_Reference__c )</errorConditionFormula>
        <errorMessage>You must include a case when creating a Data Change</errorMessage>
    </validationRules>
</CustomObject>